fix swag docs for delete positions
