# internal/api/docs/swagger.json
@@ -649,7 +649,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.Position"
+                            "$ref": "#/definitions/dto.DeletePosition"
                         }
                     }
                 ],
@@ -1373,6 +1373,20 @@
                 },
                 "visibility": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.DeletePosition": {
+            "type": "object",
+            "properties": {
+                "officer_id": {
+                    "type": "string"
+                },
+                "semester": {
+                    "type": "string"
+                },
+                "tier": {
+                    "type": "integer"
                 }
             }
         },
